--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "sentry-sdk[fastapi]<2.0.0,>=1.40.6",
     "pyjwt<3.0.0,>=2.8.0",
     "paho-mqtt<2.0,>=1.6",
+    "openai>=1.55.0",
 ]
 
 [tool.uv]
